# screen-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/screen_mcp/: __init__.py  config.py  frame.py  server.py  session.py  tools.py
src/screen_mcp/capture/: __init__.py  base.py  mss_backend.py  windows_backend.py
src/screen_mcp/vision/: __init__.py  anthropic.py  base.py
tests/: __init__.py  _fakes.py  conftest.py  test_capture.py  test_capture_linux.py  test_frame.py  test_session.py  test_tools.py  test_vision.py
