[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-mcp"
version = "0.1.0"
description = "MCP server for on-demand screen capture + multi-frame vision analysis. Pluggable Anthropic-API-compatible backend (works with official API and domestic-model proxies)."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "screen-mcp" }]

dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.109.0",
    "mss>=10.0.0",
    "Pillow>=12.0.0",
    "imagehash>=4.3.1",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=308 ; sys_platform == 'win32'",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "mypy>=1.11",
]

[project.scripts]
screen-mcp = "screen_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
